# ElBotto

./: .gitignore  AUTO_PULL_WATCH.ps1  COLLABORATION.md  DOUBLE_CLICK_ME.bat  ELBOTTO_ALL_IN_ONE_v2_1.bat  ELBOTTO_FRESH_START.ps1  ELBOTTO_FULL_SETUP.ps1  ELBOTTO_ONE_CLICK_SETUP.bat  GIT_SETUP_OR_CONNECT.bat  PATCH_GUI.ps1  PULL_FROM_GITHUB.bat  PUSH_RESULTS.bat  PUSH_RESULTS.ps1  README-LINKPACK.txt  README.md  README_ONE_CLICK.txt  SAFE_START.cmd  bot_hot_reload_snippet.py  elbotto_runtime_adapter.py  gui_main.py  gui_runner.py  gui_runner_max.py  gui_standalone.py  live_allinone.py  patch_add_control_tab.ps1  pyproject.toml  quick_calibrate.py  rules.json  rules.py  run_elbotto.py  run_gui.bat  run_quickstart_tuned.py  run_tool.py  setup_env.bat  setup_env.ps1
data/: ELBOTTO_ALL_IN_ONE_v2.bat  binance_order_book_small.csv
data/live/: BTCUSDT_depth10_20251023_23.csv  BTCUSDT_depth10_20251024_14.csv  BTCUSDT_depth10_20251024_19.csv
elbotto_control_center_plus/: README.md  gui_main.py  run_gui.bat
elbotto_control_center_ultra_ai/: README.md  gui_main.py  run_gui.bat
elbotto_gui/: __init__.py  app.py  parsing.py  runner.py  storage.py
elbotto_gui/tabs/: analysis.py  backtest.py  (+5 more)
elbotto_gui_selftest_patch/: PATCH_APP_INSTRUCTIONS.txt
elbotto_orderbook_pro/: README.md  run_ob_featurizer.py
elbotto_ultra_ai_integration_pack/: PATCH_APP_INSTRUCTIONS.txt  README_INTEGRATION.md
results/: ELBOTTO_ALL_IN_ONE.bat  equity_paper.csv  runtime_overrides.json
scripts/: package_release.py
tests/: test_application.py  test_system.py
tools/: analyze_elbotto_run.py
(+82 files in other folders)
