[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elbotto"
version = "0.2.0"
description = "Order-bookowy backtester korzystający z prawdziwych danych Binance"
authors = [{name = "El Botto"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
